# micro-manager

DeviceAdapters/: Makefile.am  configure.ac
DeviceAdapters/Ximea/: Makefile.am  XIMEACamera.h
DeviceAdapters/Ximea/xiApiPlus/: xiAPIplus_core.cpp
MMCore/: LogManager.h
